# first_fastapi_app

./: .env.example
fastapi_app/: pyproject.toml
fastapi_app/fastapi_app/: alembic.ini
fastapi_app/fastapi_app/docker/: docker-compose.yml
fastapi_app/fastapi_app/src/: database.py  models.py
fastapi_app/fastapi_app/src/login/: models.py  router.py  schemas.py  service.py
fastapi_app/fastapi_app/src/services/: exceptions.py  models.py  router.py  schemas.py  service.py
fastapi_app/fastapi_app/template/: app.py
fastapi_app/fastapi_app/tests/: db_integration.py
