[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = ""
authors = ["nghiawibu <quangnghia.ns@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
pydantic = "^2.10.3"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
pydantic-settings = "^2.6.1"
pytest = "^8.3.4"
httpx = "^0.28.1"
async-asgi-testclient = "^1.4.11"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
